<resources>
    <string name="app_name">Enrollment System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Strings used for fragments for navigation -->
    <string name="get_admitted">Get Admitted</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank Fragment</string>

    <string name="school">Holy Trinity College Seminary Foundation Inc.</string>

    <!-- login -->
    <string name="username">Username</string>
    <string name="enterUsername">Enter your Username</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter you Password</string>
    <string name="login">Login</string>


    <!-- navbar -->
    <string name="transaction">Transactions</string>
    <string name="changePassword">Change Password</string>
    <string name="studentProfile">Student Profile</string>
    <string name="dueAmount">Due Amount</string>
    <string name="reports">Reports</string>
    <string name="enrolledSubjects">Enrolled Subjects</string>
    <string name="curriculumEvaluation">Curriculum Evaluation</string>
    <string name="soa">Statement of Accounts</string>
    <string name="schoolCalendar">School Calendar</string>
    <string name="logout">Logout</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>